crates/tokmd-analysis-fun/tests/snapshots/snapshots__eco_label_grade_b.snap
---
source: crates/tokmd-analysis-fun/tests/snapshots.rs
assertion_line: 157
expression: report
---
{
  "eco_label": {
    "score": 80.0,
    "label": "B",
    "bytes": 5242880,
    "notes": "Size-based eco label (5 MB)"
  }
}
