crates/tokmd-analysis-fun/tests/snapshots/snapshots__eco_label_grade_c.snap
---
source: crates/tokmd-analysis-fun/tests/snapshots.rs
assertion_line: 163
expression: report
---
{
  "eco_label": {
    "score": 65.0,
    "label": "C",
    "bytes": 26214400,
    "notes": "Size-based eco label (25 MB)"
  }
}
