crates/tokmd-analysis-fun/tests/snapshots/snapshots__eco_label_grade_d.snap
---
source: crates/tokmd-analysis-fun/tests/snapshots.rs
assertion_line: 169
expression: report
---
{
  "eco_label": {
    "score": 45.0,
    "label": "D",
    "bytes": 104857600,
    "notes": "Size-based eco label (100 MB)"
  }
}
