crates/tokmd-analysis-fun/tests/snapshots/snapshots__eco_label_grade_e.snap
---
source: crates/tokmd-analysis-fun/tests/snapshots.rs
assertion_line: 175
expression: report
---
{
  "eco_label": {
    "score": 30.0,
    "label": "E",
    "bytes": 524288000,
    "notes": "Size-based eco label (500 MB)"
  }
}
