crates/tokmd-analysis-fun/tests/snapshots/snapshots__eco_label_zero_bytes.snap
---
source: crates/tokmd-analysis-fun/tests/snapshots.rs
assertion_line: 181
expression: report
---
{
  "eco_label": {
    "score": 95.0,
    "label": "A",
    "bytes": 0,
    "notes": "Size-based eco label (0 MB)"
  }
}
